terraform/modules/rds.tf
resource "aws_db_instance" "db" {
  allocated_storage = 20
  storage_type = "gp2"
  engine = "aurora-mysql"
  engine_version = "5.7"
  instance_class = "db.t2.micro"
  multi_az = false
  db_subnet_group_name = aws_db_subnet_group.db.name
  vpc_security_group_ids = [aws_security_group.db.id]
  storage_encrypted = true
  deletion_protection = true
  name = "${local.app_name}-${terraform.workspace}-db"
  username = "tabimemo_user"
  password = random_id.db_password.b64
  parameter_group_name = aws_db_parameter_group.db.name

  lifecycle {
    ignore_changes = [password]
  }
}

resource "aws_db_subnet_group" "db" {
  name = "${local.app_name}-${terraform.workspace}-db-subnet-group"
  subnet_ids = [aws_subnet.private_a.id]
}

resource "aws_security_group" "db" {
  name = "${local.app_name}-${terraform.workspace}-db-sg"
  description = "DB security group for ${local.app_name} ${terraform.workspace}"
  vpc_id = aws_vpc.main.id

  ingress {
    from_port = 3306
    to_port = 3306
    protocol = "tcp"
    security_groups = [aws_security_group.ecs_instance.id]
  }

  egress {
    from_port = 0
    to_port = 65535
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "random_id" "db_password" {
  byte_length = 8
}

resource "aws_db_parameter_group" "db" {
  name = "${local.app_name}-${terraform.workspace}-db-parameter-group"
  family = "aurora-mysql5.7"

  parameter {
    name         = "character_set_client"
    value        = "utf8mb4"
    apply_method = "immediate"
  }

  parameter {
    name         = "character_set_connection"
    value        = "utf8mb4"
    apply_method = "immediate"
  }

  parameter {
    name         = "character_set_database"
    value        = "utf8mb4"
    apply_method = "immediate"
  }

  parameter {
    name         = "character_set_filesystem"
    value        = "utf8mb4"
    apply_method = "immediate"
  }

  parameter {
    name         = "character_set_results"
    value        = "utf8mb4"
    apply_method = "immediate"
  }

  parameter {
    name         = "character_set_server"
    value        = "utf8mb4"
    apply_method = "immediate"
  }

  parameter {
    name         = "collation_connection"
    value        = "utf8mb4_general_ci"
    apply_method = "immediate"
  }

  parameter {
    name         = "collation_server"
    value        = "utf8mb4_general_ci"
    apply_method = "immediate"
  }
}
